[gd_scene format=3 uid="uid://uobuip56omu0"]

[ext_resource type="Script" uid="uid://pmae1ct45e4i" path="res://Scripts/Player/player.gd" id="1_xhfnw"]
[ext_resource type="Script" uid="uid://c7ff4jipuyv8g" path="res://Scripts/Player/camera_system.gd" id="2_kpjcp"]
[ext_resource type="Texture2D" uid="uid://778gspt4p830" path="res://Assets/pixel_art/ground_shadow.png" id="4_e80uo"]
[ext_resource type="Script" uid="uid://ds03xtduxfgj1" path="res://Scripts/Player/build_system.gd" id="5_cxr5p"]
[ext_resource type="Script" uid="uid://bthgdrwrkwfag" path="res://Scripts/Player/parachute_system.gd" id="6_tdg3f"]
[ext_resource type="Script" uid="uid://dxkwo36uf767o" path="res://Scripts/Player/gliding_system.gd" id="7_dtqjt"]
[ext_resource type="Script" uid="uid://dqjasegu4tjrg" path="res://Scripts/Player/climbing_system.gd" id="8_5ncpa"]
[ext_resource type="Script" uid="uid://cn7p0dep0ofoe" path="res://Scripts/Player/animation_system.gd" id="9_wi0c6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_noarx"]
radius = 0.75

[sub_resource type="SphereShape3D" id="SphereShape3D_kpjcp"]
margin = 0.2
radius = 0.4

[sub_resource type="SphereShape3D" id="SphereShape3D_kne1u"]
margin = 0.2
radius = 0.4

[sub_resource type="BoxShape3D" id="BoxShape3D_kpjcp"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_noarx"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5ncpa"]
radius = 0.6142578
height = 2.053711

[sub_resource type="Animation" id="Animation_hp6x6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlidingSystem/GliderPivot/PlayerMesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GlidingSystem/GliderPivot/PlayerMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.8, -0.508)]
}

[sub_resource type="Animation" id="Animation_5ncpa"]
resource_name = "jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlidingSystem/GliderPivot/PlayerMesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 1.2, 1), Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wi0c6"]
resource_name = "land"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GlidingSystem/GliderPivot/PlayerMesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.059, 0.9, 1.059), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GlidingSystem/GliderPivot/PlayerMesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.8, -0.508), Vector3(0, -0.9, -0.508), Vector3(0, -0.8, -0.508)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hp6x6"]
_data = {
&"RESET": SubResource("Animation_hp6x6"),
&"jump": SubResource("Animation_5ncpa"),
&"land": SubResource("Animation_wi0c6")
}

[sub_resource type="Animation" id="Animation_3tkgg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PlayerCollision:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GlidingSystem/GliderPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.8, 0.2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../GlidingSystem/GliderPivot:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_l6ohk"]
resource_name = "crouch"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../PlayerCollision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.25, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../PlayerCollision:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../GlidingSystem/GliderPivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.8, 0.2), Vector3(0, 0.35, 0.2)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../GlidingSystem/GliderPivot:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1, 0.75, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oudfo"]
_data = {
&"RESET": SubResource("Animation_3tkgg"),
&"crouch": SubResource("Animation_l6ohk")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_wi0c6"]

[node name="Player" type="CharacterBody3D" unique_id=1893396378 groups=["player"]]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_xhfnw")

[node name="PlayerCollision" type="CollisionShape3D" parent="." unique_id=1460193586]
shape = SubResource("CapsuleShape3D_noarx")

[node name="CameraSystem" type="Node3D" parent="." unique_id=114516000 node_paths=PackedStringArray("player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 2.5, 1.5)
script = ExtResource("2_kpjcp")
player = NodePath("..")

[node name="VerticalSpringArm" type="SpringArm3D" parent="CameraSystem" unique_id=1311786704]
transform = Transform3D(1, 0, 0, 0, 0.90630776, 0.42261827, 0, -0.42261827, 0.90630776, 0, -1, 0)
collision_mask = 3
shape = SubResource("SphereShape3D_kpjcp")
margin = 0.5

[node name="HorizontalSpringArm" type="SpringArm3D" parent="CameraSystem/VerticalSpringArm" unique_id=1511684666]
collision_mask = 3
shape = SubResource("SphereShape3D_kne1u")
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CameraSystem/VerticalSpringArm/HorizontalSpringArm" unique_id=2025376675]

[node name="PlacementTarget" type="Marker3D" parent="." unique_id=1827154894]
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 1.517802, 0.20467043, -2.8666239)

[node name="Area3D" type="Area3D" parent="PlacementTarget" unique_id=1867400729]

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlacementTarget/Area3D" unique_id=1145033621]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2648841, -1.2484848)
shape = SubResource("BoxShape3D_kpjcp")

[node name="GroundIndicator" type="Node3D" parent="." unique_id=792369333]

[node name="GroundShadow" type="Sprite3D" parent="GroundIndicator" unique_id=1804552071]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, -1, 0)
texture = ExtResource("4_e80uo")

[node name="GroundRay" type="RayCast3D" parent="GroundIndicator" unique_id=1901376146]
target_position = Vector3(0, 1, 0)

[node name="BuildSystem" type="Node3D" parent="." unique_id=312905947]
script = ExtResource("5_cxr5p")

[node name="ParachuteSystem" type="Node3D" parent="." unique_id=1344831112]
script = ExtResource("6_tdg3f")

[node name="GlidingSystem" type="Node3D" parent="." unique_id=873178416]
script = ExtResource("7_dtqjt")

[node name="GliderMount" type="Node3D" parent="GlidingSystem" unique_id=2002869071]

[node name="GliderPivot" type="Node3D" parent="GlidingSystem" unique_id=2073864409]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0.2)

[node name="PlayerMesh" type="MeshInstance3D" parent="GlidingSystem/GliderPivot" unique_id=702675214]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.8, -0.508)
mesh = SubResource("CapsuleMesh_noarx")
skeleton = NodePath("../../..")

[node name="ClimbingSystem" type="Node3D" parent="." unique_id=1229038250]
script = ExtResource("8_5ncpa")

[node name="WaterDetectArea" type="Area3D" parent="." unique_id=1926104750]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterDetectArea" unique_id=1598174685]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00048828125, 0)
shape = SubResource("CapsuleShape3D_5ncpa")
debug_color = Color(0.93840855, 1.3091564e-05, 0.6259609, 0.41960785)

[node name="AnimationSystem" type="Node" parent="." unique_id=1320357077]
script = ExtResource("9_wi0c6")

[node name="JumpAnimation" type="AnimationPlayer" parent="AnimationSystem" unique_id=488272628]
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_hp6x6")

[node name="CrouchAnimation" type="AnimationPlayer" parent="AnimationSystem" unique_id=840330528]
libraries/ = SubResource("AnimationLibrary_oudfo")

[node name="Timers" type="Node" parent="." unique_id=823575479]

[node name="JumpBufferTimer" type="Timer" parent="Timers" unique_id=1769398106]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="Timers" unique_id=1252466580]
wait_time = 0.1
one_shot = true

[node name="UncrouchTimer" type="Timer" parent="Timers" unique_id=1582678495]
wait_time = 0.1
one_shot = true

[node name="CrouchDetect" type="ShapeCast3D" parent="." unique_id=593667219]
transform = Transform3D(1.05, 0, 0, 0, 1.05, 0, 0, 0, 1.05, 0, 0, 0)
shape = SubResource("SphereShape3D_wi0c6")
target_position = Vector3(0, 1, 0)
debug_shape_custom_color = Color(1, 0, 1, 1)
